--- a/html/index2.html
+++ b/html/index2.html
@@ -4,7 +4,7 @@
         <!-- Basic Page Needs
         ================================================== -->
         <meta charset="utf-8">
-        <title>Your Page Title Here :)</title>
+        <title>Homepage</title>
         <meta name="description" content="">
         <meta name="author" content="">
         <!-- Mobile Specific Metas
